--- a/myhomework.html
+++ b/myhomework.html
@@ -87,9 +87,9 @@
     <h2>Bài Menu item:</h2>
     <h3>Bài tập Menu Item:</h3>
     <ul>
-      <li>Menu item 1</li>
+      <li>🍕Menu item 1</li>
       <li>
-        Menu item 2
+        🎇 Menu item 2
         <ol type="I">
           <li>menu item 2.1</li>
           <li>
@@ -104,8 +104,8 @@
           <li>menu item 2.4</li>
         </ol>
       </li>
-      <li>Menu item 3</li>
-      <li>Menu item 4</li>
+      <li>🚓Menu item 3</li>
+      <li>🛺Menu item 4</li>
     </ul>
     <hr />
     <!-- Thẻ paragraph và Lorem -->
@@ -229,6 +229,55 @@
       </tfoot>
     </table>
     <hr />
+    <!-- Bảng danh sách viên -->
+    <h2>Bảng danh sách viên</h2>
+    <table border="1" width="40%" align="center" bgcolor="#ffocba">
+      <thead>
+        <th>Cột</th>
+        <th>Tên sinh viên</th>
+        <th>Điểm</th>
+      </thead>
+      <tbody>
+        <tr>
+          <td>1</td>
+          <td>Lộc</td>
+          <td>10</td>
+        </tr>
+      </tbody>
+      <tfoot>
+        <tr>
+          <td>Tổng</td>
+          <td>1</td>
+          <td>10</td>
+        </tr>
+      </tfoot>
+    </table>
+    <hr />
+    <table border="1" width = "40%", align="center" bgcolor = "#1907ff">
+      <thead>
+        <th colspan="3">DSSV</th>
+      </thead>
+      <tbody>
+        <tr>
+          <td rowspan="2" align="center">TH1</td>
+          <td>A</td>
+          <td>7</td>
+          <tr>
+            <td>B</td>
+            <td>9</td>
+          </tr>
+        </tr>
+        <tr>
+          <td rowspan="2" valign = "top" align="center">TH2</td>
+          <td>C</td>
+          <td>5</td>
+          <tr>
+            <td>D</td>
+            <td>8</td>
+          </tr>
+        </tr>
+      </tbody>
+    </table>
     <a href="about.html">Profile</a><br />
     <a href="index.html">Trang chủ</a> <br />
     <a href="#">Quay lại đầu trang.</a>
