--- a/myhomework.html
+++ b/myhomework.html
@@ -278,6 +278,28 @@
         </tr>
       </tbody>
     </table>
+    <hr>
+    <!-- Thẻ Form -->
+     <h2><b>Form đăng ký</b></h2>
+
+     <form action="">
+       Tên đăng nhập <input type="text" name="" id=""> <br>
+       Mật khẩu <input type="password" name="" id=""> <br>
+       Giới tính <input type="radio" name="" id=""> Nam
+       <input type="radio" name="" id=""> Nữ <br>
+       Sở thích <input type="checkbox" name="" id=""> Thể thao
+                <input type="checkbox" name="" id=""> Du lịch <br>
+      Hình <input type="file" name="" id=""> <br>
+      Ngày sinh <input type="date" name="" id="">
+      <select name="" id="">
+        <option value=""> HCM</option> 
+        <option value="">Hà Nội</option> 
+      </select> <br>
+        <input type="submit" value=""> Submit
+        <input type="reset" value="">  Reset  
+
+     </form>
+     <hr>
     <a href="about.html">Profile</a><br />
     <a href="index.html">Trang chủ</a> <br />
     <a href="#">Quay lại đầu trang.</a>
