--- a/myhomework.html
+++ b/myhomework.html
@@ -145,7 +145,7 @@
     <hr />
     <!-- Học về table(td: table date, th: table header, tr: table row): -->
     <h2>Học về table:</h2>
-    <table>
+    <table border="1" align="center" width = "40%", bgcolor = "white">
       <thead>
         <tr>
           <th>Ten san pham</th>
@@ -172,7 +172,7 @@
     <hr />
     <!-- Học về table: Colspan và Rowspan -->
     <h2>Học về table: Colspan và Rowspan</h2>
-    <table>
+    <table border="2" align="center" style="border-color: blue;">
       <thead>
         <tr>
           <th>Ten san pham</th>
@@ -300,6 +300,12 @@
 
      </form>
      <hr>
+     <!-- Học về Opacity, Display và Visibility -->
+     <h2>Học về Opacity</h2>
+     <h4>Lorem ipsum dolor sit amet.</h4>
+     <h4>
+      Lorem ipsum dolor sit amet.
+     </h4>
     <a href="about.html">Profile</a><br />
     <a href="index.html">Trang chủ</a> <br />
     <a href="#">Quay lại đầu trang.</a>
