--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>My First Web</title>
   </head>
   <body>
-    <h1>Chào mừng đến với web đầu tiên của tôi!</h1>
+    <h1 style="color: black">Chào mừng đến với web đầu tiên của tôi!</h1>
     <h2>Dương Tấn Lộc</h2>
     <marquee behavior="" direction="left" speed="5">
       <img
