--- a/myhomework.html
+++ b/myhomework.html
@@ -305,7 +305,86 @@
      <h4>Lorem ipsum dolor sit amet.</h4>
      <h4>
       Lorem ipsum dolor sit amet.
-     </h4>>
+     </h4>
+     <hr>
+     <!-- Học về class, element, element class -->
+      <h2>Học về class, element, element class</h2>
+      <h2 id="line312">Ví dụ 1</h2>
+      <h3 class="h3_mhw">Tạo mục lục:</h3>
+      <ul class="class_menu_item314">
+        <li>Menu item 1</li>
+        <li class="li_316">Menu item 2</li>
+        <li>Menu item 3</li>
+        <li class="li_316">Menu item 4</li>
+      </ul>
+      <p class="p_320">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, culpa!
+      </p>
+      <hr>
+      <!-- Học về class, element, element class, kết hợp dấu phẩy combiner selector chọn nhiều thẻ -->
+       <h2 id="demo1">Học về class, element, element class, kết hợp dấu phẩy combiner selector chọn nhiều thẻ</h2>
+       <h2 class="demo2">Ví dụ 2</h2>
+       <h3 class="demo3">Tạo mục lục</h3>
+       <ul>
+        <li class="demo4">Menu item 1</li>
+        <li>Menu item 2</li>
+        <li class="demo4 demo402">Menu item 3</li>
+        <li>Menu item 4</li>
+       </ul>
+       <p>Lorem ipsum dolor sit amet.</p> <br>
+       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique.</p>
+       <hr>
+       <!-- Combiner selector p3: Space, element_element -->
+        <h2>Combiner selector p3: Space, element_element</h2>
+        <h2>Tuổi trẻ</h2>
+        <h3 class="demo_p3">Tiền không có</h3>
+        <h3 class="demo_p3 demo2">Quan hệ chưa có</h3>
+        <h3 id="line341">Đến cả tự tin cũng không có</h3>
+        <h3>Vậy bạn có gì</h3>
+        <div>
+          <p>Đoạn văn 1</p>
+          <block>
+            <!-- Style.css div p(tác động toàn bộ con của div), còn div > p (Tác động vào chỉ có con trực tiếp, cháu không tính) -->
+            <p>Đoạn văn thêm</p> 
+          </block>
+          <p>Đoạn văn 2</p>
+          <p>Đoạn văn 3</p>
+        </div>
+        <div class="loichuc">
+          <p>Chúc các bạn học tốt</p>
+          <p>Chúc các bạn học tốt</p>
+        </div>
+        <hr>
+        <!--  Combiner selector p4: element + element, element ~ element -->
+        <h2>Combiner selector p4: element + element, element ~ element</h2>
+         <h2>Tuổi trẻ</h2>
+         <!-- Style.css h2 + h3 là h3 nằm liền sau sát với h2 -->
+        <h3 class="demo_p4">Tiền không có</h3>
+        <h3 class="demo_p4 demo2">Quan hệ chưa có</h3>
+        <h3 id="line363">Đến cả tự tin cũng không có</h3>
+        <h3>Vậy bạn có gì</h3>
+        <div>
+          <p>Đoạn văn 1</p>
+          <block>
+            <!-- Style.css div p(tác động toàn bộ con của div), còn div > p (Tác động vào chỉ có con trực tiếp, cháu không tính) -->
+            <p>Đoạn văn thêm</p> 
+          </block>
+          <p>Đoạn văn 2</p>
+          <p>Đoạn văn 3</p>
+        </div>
+        <div class="loichuc">
+          <p>Chúc các bạn học tốt</p>
+          <p>Chúc các bạn học tốt</p>
+        </div>
+        <hr>
+        <!-- Học Attributes selector -->
+         <h2> Học Attributes selector </h2>
+         <!-- Tác động vào các thẻ có thuộc tính là [attb] -->
+         <a attb="http://tuhoc.cc" target = "_blank">Click vào em đi 1</a>
+         <a attb="http://tuhoc.cc" target = "_self">Click vào em đi 2</a>
+         <a attb="http://tuhoc.cc" target = "_blank">Click vào em đi 3</a>
+         <b attb="">Nhấn vào</b>
+         <hr>
     <a href="about.html">Profile</a><br />
     <a href="index.html">Trang chủ</a> <br />
     <a href="#">Quay lại đầu trang.</a>
